--- a/index.html
+++ b/index.html
@@ -3,7 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Yousef Almasaeed</title>
   </head>
-  <body></body>
+  <body>
+    <h1 style="text-align: center">Cookies Store</h1>
+
+    <div style="display: flex; justify-content: center">
+      <img src="./assets/cookies.png" alt="" width="400" height="400" />
+    </div>
+
+    <h4 style="text-align: center">Products</h4>
+
+    <div
+      style="
+        border: 2px solid black;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        padding: 20px;
+      "
+    >
+      <img src="./assets/cookies1.png" alt="" width="100" />
+      <span>Cookies 1</span>
+    </div>
+
+    <div
+      style="
+        margin-top: 10px;
+        border: 2px solid black;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        padding: 20px;
+      "
+    >
+      <img src="./assets/cookies2.png" alt="" width="100" />
+      <span>Cookies 2</span>
+    </div>
+
+    <div
+      style="
+        margin-top: 10px;
+        border: 2px solid black;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        padding: 20px;
+      "
+    >
+      <img src="./assets/cookies3.png" alt="" width="100" />
+      <span>Cookies 3</span>
+    </div>
+  </body>
 </html>
